<resources>
    <string name="app_name">ROOM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Crear cuenta</string>
    <string name="username">Nombre de usuario</string>
    <string name="link_register"><u>No tienes cuenta, Registrate</u></string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="age">Edad</string>
    <string name="lastname">Apellido</string>
</resources>